# BlenderBatchExporter

./: .gitignore  LICENSE  README.md  batchBlender.sh  batchExportObj.py  batchExportObjInner.py  exportObj.py  pyproject.toml  sharedArguments.py
BlenderBatchExporter/: __init__.py  batchExportObj.py
